[package]
name = "nats_959"
version = "0.1.0"
edition = "2021"

[dependencies]
#async-nats = { git = "https://github.com/nats-io/nats.rs" }
async-nats = { path = "./nats.rs/async-nats" }
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
